# masters

./: .gitignore  README.md  pyproject.toml  requirements.txt  selected_tickers.xlsx
BL_Input/: AnalystRecommendation.xlsx
src/: HighCorrelation.ipynb  LowCorrelation.ipynb  MixedCorrelation.ipynb  correlationPicker.ipynb  optim.py  pickStocksByCorrelation.py  pickingTickers.ipynb  portfolioTickers.xlsx  qian-risk-contrib.ipynb  testing.ipynb
