[project]
name = "masters"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "googletrans==3.1.0a0",
    "html5lib>=1.1",
    "jupyter>=1.1.1",
    "lxml>=5.3.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyportfolioopt>=1.5.6",
    "riskfolio-lib>=7.0.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "yfinance>=0.2.55",
]
